fix: change form gaps

--- a/eventsreact/src/index.css
+++ b/eventsreact/src/index.css
@@ -78,7 +78,7 @@ button:hover {
 form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 label {
